build for sbt 1.0.0-RC2. #SCL-11553