@@ -23,8 +23,29 @@ libraryDependencies ++= Seq(
 initialCommands := """import org.jetbrains._"""
 
 // set up 'scripted; sbt plugin for testing sbt plugins
-ScriptedPlugin.scriptedSettings
-scriptedLaunchOpts ++=
-  Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value)
+//ScriptedPlugin.scriptedSettings
 
-crossSbtVersions := Seq("0.13.15", "1.0.0-M6")
+crossSbtVersions := Seq("0.13.15", "1.0.0-RC2")
+
+
+// workaround for https://github.com/sbt/sbt/issues/3325 -- remove when it's fixed
+ScriptedPlugin.scriptedSettings.filterNot(_.key.key.label == libraryDependencies.key.label)
+
+libraryDependencies ++= {
+  CrossVersion.binarySbtVersion(scriptedSbt.value) match {
+    case "0.13" =>
+      Seq(
+        "org.scala-sbt" % "scripted-sbt" % scriptedSbt.value % scriptedConf.toString,
+        "org.scala-sbt" % "sbt-launch" % scriptedSbt.value % scriptedLaunchConf.toString
+      )
+    case _ =>
+      Seq(
+        "org.scala-sbt" %% "scripted-sbt" % scriptedSbt.value % scriptedConf.toString,
+        "org.scala-sbt" % "sbt-launch" % scriptedSbt.value % scriptedLaunchConf.toString
+      )
+  }
+}
+// --- end workaround
+
+scriptedLaunchOpts ++=
+  Seq("-Xmx1024M", "-Dplugin.version=" + version.value)
